Paladin rework (sortof)